<resources>
    <string name="app_name">Autenticando usuários no Firebase</string>
    <string name="titulo_form_cadastro">Cadastre-se</string>
    <string name="titulo_form_login">Login do Usuário</string>
    <string name="hint_email">E-mail</string>
    <string name="hint_senha">Senha</string>
    <string name="texto_botao_cadastrar">CADASTRAR</string>
    <string name="texto_botao_login">ENTRAR</string>
    <string name="texto_tela_cadastro">Não possui uma conta?\nCadastre-se agora mesmo!</string>
    <string name="texto_botao_logouth">DESLOGAR</string>
    <string name="texto_recuperar_senha">Recuperar senha</string>
    <string name="texto_botao_redefinir_senha">Redefinir Senha</string>

    <string name="oauth_client">856114836983-4u33bu4lhj1bf88lq28htf8odg91fqce.apps.googleusercontent.com</string>
    <string name="text_progress_loading">Carregando</string>
</resources>