<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/light_gray"
        tools:context=".view.formlogin.FormLogin">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/titulo_form_login"
            android:textSize="25sp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:layout_gravity="center"
            android:layout_marginTop="100dp"
            />

        <EditText
            android:id="@+id/edit_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_email"
            android:background="@color/white"
            android:padding="15dp"
            android:maxLines="1"
            android:inputType="textEmailAddress"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="20dp" />

        <EditText
            android:id="@+id/edit_senha"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_senha"
            android:background="@color/white"
            android:padding="15dp"
            android:maxLines="1"
            android:inputType="numberPassword"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="20dp" />

        <Button
            android:id="@+id/bt_entrar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text= "@string/texto_botao_login"
            android:textSize="18sp"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:padding="15dp"
            android:backgroundTint="@color/black"
            android:layout_margin="20dp"/>

        <TextView
            android:id="@+id/txt_tela_cadastro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/texto_tela_cadastro"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textAlignment="center"
            android:layout_gravity="center"/>

        <TextView
            android:id="@+id/txt_redefinir_senha"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/texto_recuperar_senha"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textAlignment="center"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"/>

        <com.google.android.gms.common.SignInButton
            android:id="@+id/bt_loginWithGoogle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"/>
    </LinearLayout>
</androidx.core.widget.NestedScrollView>